AyaClub 1.0.1, 2018-01-17
------------------------
- fix issue with Customize Animations checkbox

AyaClub 1.0.0, 2017-10-30
------------------------
- Initial release