@@ -4,9 +4,9 @@ Description: AyaClub is fully Responsive Music Club WordPress Theme. Features: A
 Author: ayatemplates
 Author URI: https://ayatemplates.com
 Theme URI: https://ayatemplates.com/product/ayaclub
-Version: 1.0.1
-Text Domain: tishonatorclub
-Tags: blog, entertainment, food-and-drink, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
+Version: 1.0.2
+Text Domain: ayaclub
+Tags: blog, entertainment, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
